Bug 82550 - UI - MacOSX GetTextBreak always return -1, so dialog message boxes drawn out of proportion on OSX
Summary: UI - MacOSX GetTextBreak always return -1, so dialog message boxes drawn out ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) macOS (All)
: highest blocker
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0
Keywords: regression
: 82450 82526 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-13 09:03 UTC by Alex Thurgood
Modified: 2014-08-15 13:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2014-08-13 09:03:36 UTC
Using a more or less daily build from master, on OSX, the new dialog UI changes have caused message boxes to be incorrectly displayed, with a larger than life baox containing text that is generally right at the bottom of the rectangle and pushed to the right hand side.

Apparent in at least :

- Java classpath add archive dialog
- About window
- DB creation wizard main pane
- Extension manager when clicking on a registered extension
Comment 1 Alex Thurgood 2014-08-13 09:04:14 UTC
Regression over 4.3 and 4.2.x
Comment 2 retired 2014-08-13 10:01:02 UTC
*** Bug 82450 has been marked as a duplicate of this bug. ***
Comment 3 Emir Sarı 2014-08-13 10:03:26 UTC
"Who broke the fountain?"

:)
Comment 4 Emir Sarı 2014-08-13 10:05:36 UTC
(In reply to comment #3)
> "Who broke the fountain?"
> 
> :)

This is a local joke, anyway, sorry for the noise. :))

Reproducible on the latest master BTW.
Comment 5 retired 2014-08-13 15:21:19 UTC
screenshot of much toooooooo long about window: https://bugs.freedesktop.org/attachment.cgi?id=104413
Comment 6 Caolán McNamara 2014-08-14 13:21:55 UTC
*** Bug 82526 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2014-08-14 13:48:13 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4c1e2c446865b355f50720b8b96ec704822006dc

Resolves: fdo#82550 MacOSX GetTextBreak always return -1



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2014-08-14 13:50:28 UTC
That seems to fix it anyway, hopefully Norbert will have a look to see if its a desirable fix.
Comment 10 Norbert Thiebaud 2014-08-14 16:22:37 UTC
caolan said: "That seems to fix it anyway, hopefully Norbert will have a look to see if its a desirable fix."

well I was about to commit something... but your fix seems 'better'
What puzzle me is that nTextWidth in OuputDevice::GetTextBreak()
does not look like a 'logical unit'.
in the test of the about box.. it comes with a value of 485
and
ImplLogicWidthToDevicePixel( nTextWidth ) return an insane value 4.10^6 or something like that

can you confirm that nTextWidth there is indeed a logical unit ?
Comment 11 Norbert Thiebaud 2014-08-14 16:23:59 UTC
correction
it is 
LogicWidthToDeviceCoordinate( nTextWidth );
that return the insane value
Comment 12 retired 2014-08-14 16:51:11 UTC
thanks for addressing this one.
Comment 13 Norbert Thiebaud 2014-08-14 20:38:30 UTC
Ok, I found the real bug.. it is in map.cxx
I'll push something soon (will revert caolan's version)
Comment 14 Commit Notification 2014-08-14 20:45:32 UTC
Norbert Thiebaud committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8584f62e28369594c5d1b733e5804837a98dd85

fdo#82550 LogicWidthToDeviceCoordinate missed handling of mbMap == false



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2014-08-14 20:45:46 UTC
Norbert Thiebaud committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=47f3485579929724afc0c4c5ebdfd2143cf952be

Revert "Resolves: fdo#82550 MacOSX GetTextBreak always return -1"



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 retired 2014-08-15 13:26:32 UTC
Fix verified in Version: 4.4.0.0.alpha0+
Build ID: b5688eb1523754f94aaa5af6d372174cab1a4bd7
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-08-15_09:09:58

Thanks norbert.