Resolves: fdo#82550 MacOSX GetTextBreak always return -1

so multiline text ends up splitting over a huge number of
lines leading to massively tall dialogs when they contain
text which is supposed to line break

regression from 6ca2d0d6645a697d323593a401ea8b1da02445bf

Change-Id: I51cecd9164112af3208bffced63aed7e261ea9e2